--- a/Readme
+++ b/Readme
@@ -1,1 +1,3 @@
 Source code for the Bachlor Thesis of Severi Julius Suonenlahti at Maastricht Science Program, 2020
+
+The orignal source code is available at https://gitlab.com/Teuniz/EDFbrowser
